# mm_mailman

./: .gitignore  Containerfile  README.md  bot.py  channels.json  config.py  database.py  handlers.py  main.py  mattermost.py  patches.py  pyproject.toml  requirements.txt  state.py
.github/workflows/: format.yml  tests.yml  unit-tests.yml
scripts/: __init__.py  config.py  database.py  handlers.py
tests/: success_message.py  test.env  test_bot.py  test_config.py  test_database.py  test_main.py  test_mattermost.py
